--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -37,9 +37,9 @@ r.TranslucentSortPolicy=0
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.CustomDepthTemporalAAJitter=True
-r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=False
-r.DefaultFeature.AmbientOcclusion=False
+r.PostProcessing.PropagateAlpha=2
+r.DefaultFeature.Bloom=True
+r.DefaultFeature.AmbientOcclusion=True
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
@@ -51,7 +51,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.HighlightContrastScale=1.0
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=1.0
-r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.MotionBlur=True
 r.DefaultFeature.LensFlare=False
 r.TemporalAA.Upsampling=False
 r.SSGI.Enable=False
@@ -364,5 +364,46 @@ bUseManualIPAddress=False
 ManualIPAddress=
 
 [/Script/OculusXRHMD.OculusXRHMDRuntimeSettings]
+SystemSplashBackground=Black
+bAutoEnabled=False
 XrApi=OVRPluginOpenXR
+ColorSpace=P3
+ControllerPoseAlignment=Default
+bSupportsDash=True
+bCompositesDepth=True
+bHQDistortion=False
+MetaXRJsonPath=(FilePath="")
+MPPoseRestoreType=Disabled
+bDynamicResolution=False
+PixelDensityMin=0.800000
+PixelDensityMax=1.200000
++SupportedDevices=Quest3
++SupportedDevices=QuestPro
++SupportedDevices=Quest2
+SuggestedCpuPerfLevel=SustainedLow
+SuggestedGpuPerfLevel=SustainedHigh
+FoveatedRenderingMethod=FixedFoveatedRendering
+FoveatedRenderingLevel=Off
+bDynamicFoveatedRendering=True
+bSupportEyeTrackedFoveatedRendering=False
+bCompositeDepthMobile=False
+bFocusAware=True
+bLateLatching=False
+bRequiresSystemKeyboard=False
+HandTrackingSupport=HandsOnly
+HandTrackingFrequency=LOW
+HandTrackingVersion=Default
+bInsightPassthroughEnabled=True
+bAnchorSupportEnabled=True
+bAnchorSharingEnabled=True
+bSceneSupportEnabled=True
+bBodyTrackingEnabled=False
+bEyeTrackingEnabled=False
+bFaceTrackingEnabled=False
+FaceTrackingDataSource=()
+bDeploySoToDevice=False
+bIterativeCookOnTheFly=False
+bSupportExperimentalFeatures=False
+ProcessorFavor=FavorEqually
+bTileTurnOffEnabled=True
 
