--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -343,7 +343,23 @@ bStreamLandscapeMeshLODs=False
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/NavigationSystem.NavigationSystemV1]
+DefaultAgentName=None
+CrowdManagerClass=/Script/AIModule.CrowdManager
+bAutoCreateNavigationData=True
+bSpawnNavDataInNavBoundsLevel=False
 bAllowClientSideNavigation=True
+bShouldDiscardSubLevelNavData=True
+bTickWhilePaused=False
+bInitialBuildingLocked=False
+bSkipAgentHeightCheckWhenPickingNavData=False
+GeometryExportTriangleCountWarningThreshold=200000
+bGenerateNavigationOnlyAroundNavigationInvokers=False
+ActiveTilesUpdateInterval=1.000000
+DataGatheringMode=Instant
+DirtyAreaWarningSizeThreshold=-1.000000
+GatheringNavModifiersWarningLimitTime=-1.000000
++SupportedAgents=(Name="Default",Color=(B=0,G=75,R=38,A=164),DefaultQueryExtent=(X=50.000000,Y=50.000000,Z=250.000000),NavDataClass="/Script/NavigationSystem.RecastNavMesh",AgentRadius=1.000000,AgentHeight=1.000000,AgentStepHeight=-1.000000,NavWalkingSearchHeightScale=0.500000,PreferredNavData=None,bCanCrouch=False,bCanJump=False,bCanWalk=False,bCanSwim=False,bCanFly=False)
+SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=True,bSupportsAgent3=True,bSupportsAgent4=True,bSupportsAgent5=True,bSupportsAgent6=True,bSupportsAgent7=True,bSupportsAgent8=True,bSupportsAgent9=True,bSupportsAgent10=True,bSupportsAgent11=True,bSupportsAgent12=True,bSupportsAgent13=True,bSupportsAgent14=True,bSupportsAgent15=True)
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/XRDefenceGame")
@@ -406,4 +422,54 @@ bIterativeCookOnTheFly=False
 bSupportExperimentalFeatures=False
 ProcessorFavor=FavorEqually
 bTileTurnOffEnabled=True
+
+[/Script/NavigationSystem.RecastNavMesh]
+bDrawPolyEdges=False
+bDistinctlyDrawTilesBeingBuilt=True
+DrawOffset=10.000000
+bFixedTilePoolSize=False
+TilePoolSize=1024
+TileSizeUU=304.000000
+CellSize=1.000000
+CellHeight=1.000000
+NavMeshResolutionParams[0]=(CellSize=1.000000,CellHeight=1.000000,AgentMaxStepHeight=1.000000)
+NavMeshResolutionParams[1]=(CellSize=1.000000,CellHeight=1.000000,AgentMaxStepHeight=1.000000)
+NavMeshResolutionParams[2]=(CellSize=1.000000,CellHeight=1.000000,AgentMaxStepHeight=1.000000)
+AgentRadius=1.000000
+AgentHeight=1.000000
+AgentMaxSlope=1.000000
+AgentMaxStepHeight=35.000000
+MinRegionArea=0.000000
+MergeRegionSize=400.000000
+MaxSimplificationError=1.300000
+MaxSimultaneousTileGenerationJobsCount=1024
+TileNumberHardLimit=1048576
+DefaultDrawDistance=5000.000000
+DefaultMaxSearchNodes=2048.000000
+DefaultMaxHierarchicalSearchNodes=2048.000000
+RegionPartitioning=Watershed
+LayerPartitioning=Watershed
+RegionChunkSplits=2
+LayerChunkSplits=2
+bSortNavigationAreasByCost=True
+bIsWorldPartitioned=False
+bPerformVoxelFiltering=True
+bMarkLowHeightAreas=False
+bUseExtraTopCellWhenMarkingAreas=True
+bFilterLowSpanSequences=False
+bFilterLowSpanFromTileCache=False
+bDoFullyAsyncNavDataGathering=False
+bUseBetterOffsetsFromCorners=True
+bStoreEmptyTileLayers=False
+bUseVirtualFilters=True
+bUseVirtualGeometryFilteringAndDirtying=False
+bAllowNavLinkAsPathEnd=False
+TimeSliceFilterLedgeSpansMaxYProcess=13
+TimeSliceLongDurationDebug=0.002000
+InvokerTilePriorityBumpDistanceThresholdInTileUnits=1
+InvokerTilePriorityBumpIncrease=1
+bUseVoxelCache=False
+TileSetUpdateInterval=1.000000
+HeuristicScale=0.999000
+VerticalDeviationFromGroundCompensation=0.000000
 
