--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -479,6 +479,7 @@ bUseVoxelCache=False
 TileSetUpdateInterval=1.000000
 HeuristicScale=0.999000
 VerticalDeviationFromGroundCompensation=0.000000
+RuntimeGeneration=Dynamic
 
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 ActivationKey=SpaceBar
