팔레트에서 게임 모드 아예 지웠습니다

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -475,6 +475,7 @@ TileSetUpdateInterval=1.000000
 HeuristicScale=0.999000
 VerticalDeviationFromGroundCompensation=0.000000
 bForceRebuildOnLoad=True
+ObservedPathsTickInterval=0.100000
 RuntimeGeneration=Dynamic
 
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
