--- a/XRDefenceGame.uproject
+++ b/XRDefenceGame.uproject
@@ -35,6 +35,10 @@
 		{
 			"Name": "SkeletalMeshModelingTools",
 			"Enabled": true
+		},
+		{
+			"Name": "CascadeToNiagaraConverter",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
