--- a/XRDefenceGame.uproject
+++ b/XRDefenceGame.uproject
@@ -39,7 +39,11 @@
 		{
 			"Name": "CascadeToNiagaraConverter",
 			"Enabled": true
-		}
+		},
+		{
+            		"Name": "MotionWarping",
+            		"Enabled": true
+        	}
 	],
 	"TargetPlatforms": [
 		"Android",
