--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -135,7 +135,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
 GameDefaultMap=/Game/Map/GameLevel.GameLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
