제스처 라인이 여 ㅇ역 밖에 나가면 필드 중심으로 박히게 되는 것을 막았습니다

--- a/XRDefenceGame.uproject
+++ b/XRDefenceGame.uproject
@@ -44,6 +44,10 @@
 		{
 			"Name": "MotionWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "OnlineSubsystemSteam",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
