우선 2명이 같은 레벨에 있다가 서로 다른 곳에서 생성되게 바꾸었습니다

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -105,6 +105,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="LogRightHand",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="LogLeftHand",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
++ActionMappings=(ActionName="SpawnMapInput",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=None
