--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -484,3 +484,18 @@ RuntimeGeneration=Dynamic
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 ActivationKey=SpaceBar
 
+
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+bInitServerOnClient=true
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
