--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -127,7 +127,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Map/GameLevel.GameLevel
+EditorStartupMap=/Game/Map/MainLevel.MainLevel
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -136,7 +136,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
-GameDefaultMap=/Game/Map/GameLevel.GameLevel
+GameDefaultMap=/Game/Map/MainLevel.MainLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 GlobalDefaultServerGameMode=None
