make vr scene texture clear

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -73,7 +73,7 @@ r.GBufferFormat=1
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=True
-r.MobileHDR=False
+r.MobileHDR=True
 vr.MobileMultiView=True
 r.Mobile.UseHWsRGBEncoding=True
 vr.RoundRobinOcclusion=False
@@ -119,6 +119,7 @@ r.OpenGL.ForceDXC=0
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.ScreenPercentage.Default=250.000000
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
